<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorLayoutBackground"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/dimen_common_margin_large"
            android:paddingEnd="@dimen/dimen_common_margin"
            android:paddingBottom="@dimen/dimen_common_margin">

            <TextView
                android:id="@+id/id_text_name"
                style="@style/TextViewStyleBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/dimen_common_text_size_med_large" />

            <TextView
                android:id="@+id/id_text_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:textColor="@color/colorTextPrimaryAlpha"
                android:textSize="@dimen/dimen_common_text_size_title" />

            <Button
                android:id="@+id/id_button_address"
                style="?attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dimen_button_height_medium"
                android:layout_gravity="end|center"
                android:layout_margin="@dimen/dimen_common_margin_small"
                android:text="@string/string_button_name_edit_location"
                android:textColor="@color/colorStyleOneDark"
                android:textSize="@dimen/dimen_button_text_size_med" />

        </LinearLayout>

        <include layout="@layout/utility_vertical_border_layout_shadow" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorLayoutBackground"
            android:paddingLeft="@dimen/dimen_common_margin"
            android:paddingTop="@dimen/dimen_common_margin_more"
            android:paddingRight="@dimen/dimen_common_margin"
            android:paddingBottom="@dimen/dimen_common_margin"
            android:text="@string/string_label_added_items"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/dimen_common_text_size_sub" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/id_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="1"
            tools:listitem="@layout/adapter_item" />

        <include layout="@layout/utility_vertical_border_layout" />

        <Button
            android:id="@id/id_button_add_more"
            style="?attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_button_height_medium"
            android:layout_gravity="end|center"
            android:layout_margin="@dimen/dimen_common_margin_small"
            android:text="@string/string_button_name_add_more_items"
            android:textColor="@color/colorStyleOneDark"
            android:textSize="@dimen/dimen_button_text_size_med" />

    </LinearLayout>

    <include layout="@layout/utility_vertical_border_layout_shadow" />

</LinearLayout>